sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: reassignment to val
				minpos=j
                                      ^